--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "14.1.0",
     "react": "18.2.0",
