--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.60.0",
+    "react-icons": "^5.5.0",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "24.0.15",
