--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.293.0",
     "mercadopago": "^2.8.0",
     "next": "15.0.0",
