--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.7",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.293.0",
     "mercadopago": "^2.8.0",
     "next": "15.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "24.1.0",
     "@types/react": "19.1.8",
     "autoprefixer": "^10.4.15",
-    "eslint": "8.56.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "15.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.4.1",
