--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.293.0",
     "mercadopago": "^2.8.0",
-    "next": "15.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.4.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "swiper": "^11.2.10"
   },
