--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-input-mask": "^2.0.4",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/node": "24.1.0",
     "@types/react": "19.1.8",
+    "@types/react-input-mask": "^3.0.6",
     "autoprefixer": "^10.4.15",
     "eslint": "8.57.0",
     "eslint-config-next": "15.0.0",
